--- a/User Portal/force-app/main/default/classes/AB_UserPortalContactExtension_TEST.cls
+++ b/User Portal/force-app/main/default/classes/AB_UserPortalContactExtension_TEST.cls
@@ -17,8 +17,8 @@ public class AB_UserPortalContactExtension_TEST {
                 LanguageLocaleKey = 'en_US',
                 LocaleSidKey = 'en_US',
                 UserRoleId = roleType == 'IND' ? [select id from UserRole where name like 'IND Leadership' limit 1].id : [select id from UserRole where name like 'WOD%' limit 1].id,
-                WSLRNbrRouteNbr__c = 'REG220922_TAM02',
-                Wholesaler_Number__c ='51341'
+                WSLRNbrRouteNbr__c = '12345R001',
+                Wholesaler_Number__c ='12345'
             );  
         }
         else
@@ -35,8 +35,8 @@ public class AB_UserPortalContactExtension_TEST {
                 EmailEncodingKey = 'UTF-8',
                 LanguageLocaleKey = 'en_US',
                 LocaleSidKey = 'en_US',
-                WSLRNbrRouteNbr__c = 'REG220922_TAM02',
-                Wholesaler_Number__c ='51341'
+                WSLRNbrRouteNbr__c = '12345R001',
+                Wholesaler_Number__c ='12345'
             );             
         }
         
@@ -48,12 +48,14 @@ public class AB_UserPortalContactExtension_TEST {
     {
         Wholesaler_Lola_Access__c ob= new Wholesaler_Lola_Access__c(Wholesaler_Number__c = '51341', Name = 'My custom');
         insert ob;
-        Role_connector__c rc = new Role_connector__c(Role_Name__c = 'Sales Manager', Profile_Name__c = 'IND Management',
-        Profile_ID__c = [SELECT Id FROM Profile WHERE Name='Standard User'].id);
+        Role_connector__c rc = new Role_connector__c(Role_Name__c = 'Sales Manager', Profile_Name__c = 'IND Management', Profile_ID__c = [SELECT Id FROM Profile WHERE Name='Standard User'].id);
         insert rc;
-        Role_connector__c rc1 = new Role_connector__c(Role_Name__c = 'SEC', Profile_Name__c = 'WOD Management',
-        Profile_ID__c = [SELECT Id FROM Profile WHERE Name='Standard User'].id);
+        Role_connector__c rc1 = new Role_connector__c(Role_Name__c = 'SEC', Profile_Name__c = 'WOD Management', Profile_ID__c = [SELECT Id FROM Profile WHERE Name='Standard User'].id);
         insert rc1;
+        //BB START
+        Role_connector__c rc2 = new Role_connector__c(Role_Name__c = 'Dispatcher', Profile_Name__c = 'WOD ABI Dispatcher FSL', Profile_ID__c = [SELECT Id FROM Profile WHERE Name = 'Standard User'].Id);
+        insert rc2;
+        //BB END
 
     }    
     
@@ -62,15 +64,19 @@ public class AB_UserPortalContactExtension_TEST {
             for (Integer i = 0; i < n; i++) {
                 if(i ==0)
                 users.add(createUser('IND Management','IND', ProfileIdNull));
-                else
+                else if(i ==1)
                 users.add(createUser('WOD Management','WOD', ProfileIdNull));
+                //BB START
+                else 
+                users.add(createUser('WOD ABI Dispatcher FSL','FSL', ProfileIdNull));
+                //BB END
             }
         
         //RA 11/22/2018 - Consider Routes
         User thisUser = [ select Id from User where Id = :UserInfo.getUserId() ];
         System.runAs ( thisUser ) {
             Route__c r = new Route__c();
-            r.WSLRNbrRouteNbr__c = 'REG220922_TAM02';
+            r.WSLRNbrRouteNbr__c = '12345R001';
             insert r;
         }
         //End
@@ -78,7 +84,7 @@ public class AB_UserPortalContactExtension_TEST {
         return users;
     }
 
-    @isTest
+@isTest
     public static void userportalinfoIND()
     {
         Test.startTest();
@@ -88,23 +94,21 @@ public class AB_UserPortalContactExtension_TEST {
         insert r;
         UserRole r1 = new UserRole(DeveloperName = 'MyCustomRole1', Name = 'WOD');
         insert r1;
-        
         UserRole r2 = new UserRole(DeveloperName = 'MyCustomRole3', Name = 'IND Leadership');
         insert r2;
-        
-        
-               
-            List<User> usrs = createUser(2, false);
-            insert usrs;
-             User u = [SELECT id, name, UserRoleId,Alias,Email,EmailEncodingKey, 
-                       LastName,LanguageLocaleKey,LocaleSidKey,
-                       ProfileId,TimeZoneSidKey,UserName from user WHERE LastName = 'Last IND Management' limit 1];
+
+        List<User> usrs = createUser(2, false);
+        insert usrs;
+        User u = [SELECT id, name, UserRoleId,Alias,Email,EmailEncodingKey, 
+                    LastName,LanguageLocaleKey,LocaleSidKey,
+                    ProfileId,TimeZoneSidKey,UserName from user WHERE LastName = 'Last IND Management' limit 1];
         System.runAs(u) {     
             for(User usr : usrs) {
                 Role_connector__c rc = new Role_connector__c();
                 rc.Profile_ID__c = usrs[0].profileid;
                 rc.Profile_Name__c = 'IND Management';
                 rc.Role_Name__c = 'Sales Manager';
+                rc.Permission_Sets__c = [SELECT ID FROM PermissionSet WHERE Name like 'ABIQ%' LIMIT 1].ID;
                 Test.setCurrentPage(Page.AB_UserPortalContact);
                 ApexPages.currentPage().getParameters().put('id', usr.id);
                 
@@ -123,7 +127,7 @@ public class AB_UserPortalContactExtension_TEST {
         }
         Test.stopTest();
     }
- @isTest
+@isTest
     public static void userportalinfoWOD()
     {
         Test.startTest();
@@ -144,6 +148,7 @@ public class AB_UserPortalContactExtension_TEST {
                 rc.Profile_ID__c = usrs[0].profileid;
                 rc.Profile_Name__c = 'WOD Management';
                 rc.Role_Name__c = 'SEC';
+                rc.Permission_Sets__c = [SELECT ID FROM PermissionSet WHERE Name like 'ABIQ%' LIMIT 1].ID;
                 Test.setCurrentPage(Page.AB_UserPortalContact);
                 ApexPages.currentPage().getParameters().put('id', usr.id);
                 
@@ -205,14 +210,15 @@ public class AB_UserPortalContactExtension_TEST {
     {
         User u = [SELECT Id FROM User WHERE Profile.Name = 'System Administrator' AND Id !=: UserInfo.getUserId() AND IsActive = true LIMIT 1];
         User newDisUsr = createUser('ABI_Dispatcher_FSL','WOD',false);
-        newDisUsr.Wholesaler_Number__c = '998877';
+        newDisUsr.Wholesaler_Number__c = '12345';
         newDisUsr.IsActive = true;
         Insert newDisUsr;
         
         User newUsr = createUser('ABI_Merchandiser_FSL','WOD',false);
-        newUsr.Wholesaler_Number__c = '998877';
+        newUsr.Wholesaler_Number__c = '12345';
         newUsr.IsActive = true;
         Insert newUsr;
+
         
         System.runAs(newDisUsr){
             OperatingHours oh = new OperatingHours();
@@ -221,13 +227,33 @@ public class AB_UserPortalContactExtension_TEST {
             
             ServiceTerritory st = new ServiceTerritory();
             st.Name = 'Ser Terr';
-            st.OwnerId = newUsr.Id;
+            //st.OwnerId = newUsr.Id; //BB Comment Out
+            st.OwnerId = newDisUsr.Id;//BB
             st.OperatingHoursId = oh.Id;
             st.IsActive = true;
             Insert st;
+
+            //BB START
+            FSL__User_Territory__c ut = new FSL__User_Territory__c();
+            ut.FSL__ServiceTerritory__c = st.Id;
+            ut.FSL__User__c = newUsr.Id;
+            Insert ut;
+            //BB END
+
+            //BB START
+            Account accnt = new Account();
+            accnt.Name = 'Test Account';
+            accnt.RecordTypeId = '012U0000000E9k6IAC';
+            accnt.Service_Territory__c = st.Id;
+            accnt.WSLR_NBR_US__c = '12345';
+            Insert accnt;
+            //BB END
+            
         }
         System.runAs(u){
             Test.startTest();
+
+
             AB_UserPortalContactExtension cls = new AB_UserPortalContactExtension();
             cls.newUserId = newUsr.Id;
             cls.createServiceResource();
@@ -249,12 +275,12 @@ public class AB_UserPortalContactExtension_TEST {
     {
         User u = [SELECT Id FROM User WHERE Profile.Name = 'System Administrator' AND Id !=: UserInfo.getUserId() AND IsActive = true LIMIT 1];
         User newDisUsr = createUser('ABI_Dispatcher_FSL','WOD',false);
-        newDisUsr.Wholesaler_Number__c = '998877';
+        newDisUsr.Wholesaler_Number__c = '12345';
         newDisUsr.IsActive = true;
         Insert newDisUsr;
         
         User newUsr = createUser('ABI_Merchandiser_FSL','WOD',false);
-        newUsr.Wholesaler_Number__c = '998877';
+        newUsr.Wholesaler_Number__c = '12345';
         newUsr.IsActive = true;
         Insert newUsr;
         
@@ -265,7 +291,8 @@ public class AB_UserPortalContactExtension_TEST {
             
             ServiceTerritory st = new ServiceTerritory();
             st.Name = 'Ser Terr';
-            st.OwnerId = newUsr.Id;
+            //st.OwnerId = newUsr.Id;//BB Comment Out
+            st.OwnerId = newDisUsr.Id; //BB
             st.OperatingHoursId = oh.Id;
             st.IsActive = true;
             Insert st;
@@ -278,9 +305,25 @@ public class AB_UserPortalContactExtension_TEST {
             sReq.RelatedRecordId = newUsr.Id;
             sReq.IsActive = false;
             Insert sReq;
+
+            FSL__User_Territory__c ut = new FSL__User_Territory__c();
+            ut.FSL__ServiceTerritory__c = st.Id;
+            ut.FSL__User__c = newUsr.Id;
+            Insert ut;
+
+            //BB START
+            Account accnt = new Account();
+            accnt.Name = 'Test Account';
+            accnt.RecordTypeId = '012U0000000E9k6IAC';
+            accnt.Service_Territory__c = st.Id;
+            accnt.WSLR_NBR_US__c = '12345';
+            Insert accnt;
+            //BB END
+            
         }
         System.runAs(u){
             Test.startTest();
+            
             AB_UserPortalContactExtension cls = new AB_UserPortalContactExtension();
             cls.newUserId = newUsr.Id;
             cls.createServiceResource();
@@ -293,15 +336,15 @@ public class AB_UserPortalContactExtension_TEST {
     {
         User u = [SELECT Id FROM User WHERE Profile.Name = 'System Administrator' AND Id !=: UserInfo.getUserId() AND IsActive = true LIMIT 1];
         User newDisUsr = createUser('ABI_Dispatcher_FSL','WOD',false);
-        newDisUsr.Wholesaler_Number__c = '998877';
+        newDisUsr.Wholesaler_Number__c = '12345';
         newDisUsr.IsActive = true;
         Insert newDisUsr;
         
         User newUsr = createUser('ABI_Merchandiser_FSL','WOD',false);
-        newUsr.Wholesaler_Number__c = '998877';
+        newUsr.Wholesaler_Number__c = '12345';
         newUsr.IsActive = true;
         Insert newUsr;
-        
+
         System.runAs(newDisUsr){
             OperatingHours oh = new OperatingHours();
             oh.Name = 'TestOH';
@@ -309,7 +352,7 @@ public class AB_UserPortalContactExtension_TEST {
             
             ServiceTerritory st = new ServiceTerritory();
             st.Name = 'Ser Terr';
-            st.OwnerId = newUsr.Id;
+            st.OwnerId = newDisUsr.Id;
             st.OperatingHoursId = oh.Id;
             Insert st;
             
@@ -321,9 +364,21 @@ public class AB_UserPortalContactExtension_TEST {
             sReq.RelatedRecordId = newUsr.Id;
             sReq.IsActive = false;
             Insert sReq;
+
+            //BB START
+            Account accnt = new Account();
+            accnt.Name = 'Test Account';
+            accnt.RecordTypeId = '012U0000000E9k6IAC';
+            accnt.Service_Territory__c = st.Id;
+            accnt.WSLR_NBR_US__c = '12345';
+            Insert accnt;
+            //BB END
+            
         }
         System.runAs(u){
             Test.startTest();
+
+            
             AB_UserPortalContactExtension cls = new AB_UserPortalContactExtension();
             cls.newUserId = newUsr.Id;
             cls.createServiceResource();
@@ -359,9 +414,11 @@ public class AB_UserPortalContactExtension_TEST {
         
                
         User newUsr = createUser('Telesales Team Lead','WOD',false);
-        newUsr.Wholesaler_Number__c = '998877';
+        newUsr.Wholesaler_Number__c = '12345';
+        newUsr.WSLRNbrRouteNbr__c = ''; //BB
         newUsr.IsActive = true;
-        newUsr.Title = 'Merchandiser';
+        newUsr.Title = 'Telesales Team Lead';
+        newUsr.InContact_Access__c = true; //BB
         Insert newUsr;
         
         List<User> usrs = new List<User>{newUsr};
@@ -370,7 +427,8 @@ public class AB_UserPortalContactExtension_TEST {
                 Role_connector__c rc = new Role_connector__c();
                 rc.Profile_ID__c = usrs[0].profileid;
                 rc.Profile_Name__c = 'Telesales Team Lead';
-                rc.Role_Name__c = 'Merchandiser';
+                rc.Role_Name__c = 'Telesales Team Lead';
+                rc.Permission_Sets__c = [SELECT ID FROM PermissionSet WHERE Name like 'Telesales%' LIMIT 1].ID;
                 Test.setCurrentPage(Page.AB_UserPortalContact);
                 ApexPages.currentPage().getParameters().put('id', usr.id);
                 
@@ -379,7 +437,50 @@ public class AB_UserPortalContactExtension_TEST {
                 obj.getSubRouteNums();
                 obj.getRouteOptions();
                 obj.getUpdateLolaAccess();
-                obj.selRolePickVal = 'Merchandiser';
+                obj.selRolePickVal = 'Telesales Team Lead';
+                obj.save();
+                try {
+                    obj.doRemoveUser();
+                }catch(Exception e){}
+                obj.doCancel();
+            }
+        }
+        Test.stopTest();
+    }   
+
+    public static testmethod void saveMerchandiser()
+    {
+        Test.startTest();
+        String uniqueUserName = 'standarduser' + DateTime.now().getTime() + '@testorg.com';
+        Profile p = [SELECT Id FROM Profile WHERE Name='Standard User'];
+        UserRole r1 = new UserRole(DeveloperName = 'MyCustomRole1', Name = 'WOD');
+        insert r1;
+        
+               
+        User newUsr = createUser('ABI_Dispatcher_FSL','WOD',false);
+        newUsr.Wholesaler_Number__c = '12345';
+        newUsr.WSLRNbrRouteNbr__c = ''; //BB
+        newUsr.IsActive = true;
+        newUsr.Title = 'Dispatcher';
+        Insert newUsr;
+        
+        List<User> usrs = new List<User>{newUsr};
+        System.runAs(newUsr) {     
+            for(User usr : usrs) {
+                Role_connector__c rc = new Role_connector__c();
+                rc.Profile_ID__c = usrs[0].profileid;
+                rc.Profile_Name__c = 'WOD ABI Dispatcher FSL';
+                rc.Role_Name__c = 'Dispatcher';
+                rc.Permission_Sets__c = [SELECT ID FROM PermissionSet WHERE Name like 'FSL%' LIMIT 1].ID;
+                Test.setCurrentPage(Page.AB_UserPortalContact);
+                ApexPages.currentPage().getParameters().put('id', usr.id);
+                
+                AB_UserPortalContactExtension obj = new AB_UserPortalContactExtension();
+                obj.getRoleTypes();
+                obj.getSubRouteNums();
+                obj.getRouteOptions();
+                obj.getUpdateLolaAccess();
+                obj.selRolePickVal = 'Dispatcher';
                 obj.save();
                 try {
                     obj.doRemoveUser();
