--- a/User Portal/force-app/main/default/classes/AB_UserPortalHomeController_v1.cls
+++ b/User Portal/force-app/main/default/classes/AB_UserPortalHomeController_v1.cls
@@ -4,6 +4,7 @@
     Description : controller for AB_UserPortalHome page
 */
 
+
 public class AB_UserPortalHomeController_v1 
 {
 
@@ -185,8 +186,10 @@ public class AB_UserPortalHomeController_v1
       //Added  USERNAME__C to display login user name for user Femi Onakoya - Daugherty/1/4/2018
       //RA 10/4/2018 - Update for GSC Package
       //Femi: July19 - Modified below line
-      queryUsers =   'SELECT Name, Username, Email, isActive, Title, gsc_mc__Sync_to_GoSpotCheck__c, LOLA_Access__c,BigTinCan_Access__c, SRI_Access__c, ROUTEKEY__c, LastLoginDate, Employee_Number_US__c, WSLRNbrRouteNbr__c,InContact_Access__c,LiveMessage_Access__c FROM User ';      
+      queryUsers =   'SELECT Name, Username, Email, isActive, Title, gsc_mc__Sync_to_GoSpotCheck__c, LOLA_Access__c,BigTinCan_Access__c, SRI_Access__c,PCR_Access__c, ROUTEKEY__c, LastLoginDate, Employee_Number_US__c, WSLRNbrRouteNbr__c,InContact_Access__c,LiveMessage_Access__c FROM User ';      
+
       queryUsers += 'WHERE ';
+
         if(userType == 'Telesales')
         {
             String profileNam = '\'%'+currentUser.Profile.Name.left(9)+'%\'';
@@ -240,32 +243,64 @@ public class AB_UserPortalHomeController_v1
       total_size = Database.query(queryUsers).size();
       activeUsers_size = Database.query(queryUsers  + ' AND isActive = true').size();
       
-      queryUsers +=  'ORDER BY ' + sortField + ' ' + sortDirection + ' ';
+      if(userType != 'FSL')
+      {
+                queryUsers +=  'ORDER BY ' + sortField + ' ' + sortDirection + ' ';
+
+      }
       queryUsers +=  'LIMIT ' + list_size + ' ';
       queryUsers +=  'OFFSET ' + i;
     }
-    
+
+
+
      public List<userPortalWrapper> getMyUsersWrapper() 
     {
-        
         //if(wrapper==null || String.isNotBlank(nameVal)){
           wrapper = new List<userPortalWrapper>();
           buildQuery();
           system.debug('query:*** '+queryUsers);
           List<User> myUsers = Database.query(queryUsers);
-            Set<String> usernames = new Set<String>();
-            for(User u : myUsers)
-            {
-                usernames.add(u.username);
+          List<FSL__User_Territory__c> myUserTerr = new List<FSL__User_Territory__c>([SELECT FSL__Territory_Name__c, FSL__User__c,Id FROM FSL__User_Territory__c]);
+
+            Map<string, string> MapTerritory = new Map<string, string>();
+            for (FSL__User_Territory__c terr : myUserTerr) {
+                MapTerritory.put(terr.FSL__User__c, terr.FSL__Territory_Name__c);
             }
-            
-          for (User u: myUsers)
-            {
-            wrapper.add(new userPortalWrapper(u)); // passing the relevant user rec from conUserRecMap
-          }
-        //}
+
+            for (User u : myUsers){
+                String key =  u.Id;
+                string territory = '';
+                if(MapTerritory.containsKey(key)){
+                    territory = MapTerritory.get(key);
+                }
+                wrapper.add(new userPortalWrapper(u, territory));
+            }
+
+            // Set<String> usernames = new Set<String>();
+            // for(User u : myUsers)
+            // {
+            //     // if(userType == 'FSL')
+            //     // {                                
+            //         for(FSL__User_Territory__c ut: myUserTerr)
+            //         {
+            //             if(u.Id == ut.FSL__User__c)
+            //             {
+            //                 //usernames.add(u.username);
+            //                 //wrapper.add(new userPortalWrapper(u, ut));
+            //                 wrapper.add(new userPortalWrapper(u, ut.Id));
+            //             }
+            //         }
+            //     // }
+            //     else 
+            //     {
+            //         wrapper.add(new userPortalWrapper(u, ''));
+            //     }
+            //     //usernames.add(u.username);
+            //     //match uid to utid
+            //     //add below add to the
+            // }
         return wrapper;
-      
     }
 
     public pageReference doNewUser()
@@ -382,8 +417,16 @@ public class AB_UserPortalHomeController_v1
     
     
     //SortField - return sort by field. Default to Name
-    public String sortField {
-        get { if (SortField == null) {SortField = 'isActive'; } return SortField;  }
+    public String sortField 
+    {
+        get 
+        { 
+            if (SortField == null) 
+            {
+                SortField = 'isActive'; 
+            } 
+        return SortField;  
+        }
         set; 
     }
     
@@ -407,16 +450,24 @@ public class AB_UserPortalHomeController_v1
         
         // Added usr attribute to hold user rec information - femi
         public User usr {get; set;}
+        public String usrTerr {get; set;}
+        //set territory, pass in Ut along with user
         
         // added extra parameter to hold user info - femi
-        public userPortalWrapper(User u) {
-          selected = false;
-          //con = c;
-          usr = u;
+        public userPortalWrapper(User u, String uTerrId)
+        {
+            selected = false;
+            //con = c;
+            usr = u;
+            usrterr = uTerrId;
+            /*List<FSL__User_Territory__c> userUT= new List<FSL__User_Territory__c> ([SELECT FSL__Territory_Name__c FROM FSL__User_Territory__c WHERE Id =: uTerrId]);
+            if(userUT != null && userUT.size()>0)
+            {
+                usrTerr = userUT[0].FSL__Territory_Name__c;
+            }*/
         }
 
     }
-
     public PageReference processSelected() {
         //We create a new list of Contacts that we be populated only with users if they are selected
         List<User> selectedUsers = new List<User>();
@@ -491,4 +542,24 @@ public class AB_UserPortalHomeController_v1
         User sn = [select Wholesaler_Number__c from user where id =  :UserInfo.getUserId()];
         return sn.Wholesaler_Number__c;
     }
+
+    /*public List<FSL__User_Territory__c> getUserTerritories(){
+        List<FSL__User_Territory__c> uTerr = new List<FSL__User_Territory__c>();
+            if(userType == 'FSL')
+            {
+                for(User u : myUsers)
+                    {
+                        String userTerrit = '';
+                        userTerrit = [SELECT FSL__Territory_Name__c FROM FSL__User_Territory__c where FSL__User__c =:u.Id LIMIT 1];
+                    }
+            }
+        return userTerrit;
+    }*/
+
+    public void sortByUserTerritory()
+    {
+        List<FSL__User_Territory__c>sortUserTerritory=new List<FSL__User_Territory__c>([SELECT FSL__Territory_Name__c FROM FSL__User_Territory__c]);
+        sortField = 'UserTerritory';
+    }
+
 }
